// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load data thread from Email Table: should retrieve threads from DB with the correct shape: inbox 1`] = `
Array [
  Object {
    "allLabels": "1",
    "content": "<p>Hello there</p>",
    "date": "2018-06-14 08:23:19.120",
    "emailIds": "3",
    "fileTokens": "tokenC",
    "fromContactName": "User A",
    "id": 3,
    "isMuted": 0,
    "key": "keyC",
    "labels": null,
    "matchedContacts": "from",
    "max_date": "2018-06-14 08:23:19.120",
    "preview": "Hello there",
    "s3Key": "s3KeyC",
    "secure": 1,
    "status": 0,
    "subject": "Greetings",
    "threadId": "threadC",
    "uniqueId": "threadC",
    "unread": 0,
    "unsendDate": "2018-06-14 08:23:20.000",
  },
]
`;

exports[`Load data thread from Email Table: should retrieve threads from DB with the correct shape: sent 1`] = `
Array [
  Object {
    "allLabels": "3",
    "content": "<p>Hello there</p>",
    "date": "2013-10-07 08:23:19.120",
    "emailIds": "2",
    "fileTokens": null,
    "fromContactName": "User me",
    "id": 2,
    "isMuted": 1,
    "key": "keyB",
    "labels": null,
    "matchedContacts": "from",
    "max_date": "2013-10-07 08:23:19.120",
    "preview": "Hello there",
    "s3Key": "s3KeyB",
    "secure": 1,
    "status": 1,
    "subject": "Greetings",
    "threadId": "threadB",
    "uniqueId": "threadB",
    "unread": 1,
    "unsendDate": "2018-06-14 08:23:20.000",
  },
]
`;

exports[`Store data email to Email Table: should insert email to database 1`] = `
Array [
  Object {
    "content": "<p>Hello there</p>",
    "date": "2018-06-14 08:23:19.120",
    "id": 4,
    "isMuted": 0,
    "key": "keyId",
    "preview": "Hello there",
    "s3Key": "s3KeyId",
    "secure": 1,
    "status": 0,
    "subject": "Greetings",
    "threadId": "threadId",
    "unread": 1,
    "unsendDate": "2018-06-14 08:23:20.000",
  },
]
`;
